--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
 
     <integer name="com_vk_sdk_AppId">6466260</integer>
 
-    <string name="app_name">Yandex</string>
+    <string name="bad_url">Unfortunately photo unavailable :(</string>
+    <string name="load_error">Failed to load, please try later</string>
+
+    <string name="app_name">YandexPhotos</string>
     <string name="photos_tab_title">Photos</string>
     <string name="offline_tab_title">Offline</string>
 
